crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__string_parser_escaped_unix_eol.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: 0,
            range: 0..18,
            value: StringLiteral(
                ExprStringLiteral {
                    node_index: 0,
                    range: 0..18,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..18,
                                node_index: 0,
                                value: "text more text",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
