crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__string_parser_escaped_windows_eol.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..19,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..19,
                value: StringLiteral(
                    ExprStringLiteral {
                        node_index: NodeIndex(None),
                        range: 0..19,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 0..19,
                                    node_index: NodeIndex(None),
                                    value: "text more text",
                                    flags: StringLiteralFlags {
                                        quote_style: Single,
                                        prefix: Empty,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
